--- a/Gemma/WebContent/resources/css/style.css
+++ b/Gemma/WebContent/resources/css/style.css
@@ -119,9 +119,9 @@ Layout styles
 }
 
 .footer {
-	color: #fff;
-	background: #000;
-	padding: 1em 1.25em;
+	color: #ffffff;
+	background: #000000;
+	padding: .5em;
 }
 
 /* -----------------------
@@ -322,7 +322,7 @@ td:nth-child(1) {
 }
 
 .content {
-	height: 550px;
+	height: 534px;
 	background: -webkit-linear-gradient(#d5e6ee, white);
 	/* For Safari 5.1 to 6.0 */
 	background: -o-linear-gradient(#d5e6ee, white);
@@ -365,7 +365,8 @@ table.dailyspecials td {
 }
 .paging {
 	text-align: center;
-	padding: 0 1.5em;
+	padding: 0 .75em;
+	font-size: 10px
 }
 
 .paging li
