--- a/Gemma/WebContent/WEB-INF/layouts/default.xml
+++ b/Gemma/WebContent/WEB-INF/layouts/default.xml
@@ -17,7 +17,7 @@
 	<definition name="home" extends="peachy.base">
 		<put-attribute name="includes" value=""></put-attribute>
 		<put-attribute name="title" value="Peachy's Coffee"></put-attribute>
-		<put-attribute name="heading_title" value="DonzalMart"></put-attribute>
+		<put-attribute name="heading_title" value="Peachy's Coffee"></put-attribute>
 		<put-attribute name="toolbar" value="/WEB-INF/tiles/toolbar.jsp"></put-attribute>
 		<put-attribute name="content" value="/WEB-INF/tiles/home.jsp"></put-attribute>
 	</definition>
