--- a/Gemma/.settings/org.eclipse.wst.common.component
+++ b/Gemma/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,9 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
+        <dependent-module archiveName="org.aspectj.runtime_1.8.9.201607290002.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/var/ASPECTJRT_LIB">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value=""/>
         <property name="java-output-path" value="/donzalmart/build/classes"/>
     </wb-module>
