Changed the name of the routine that creates the shipping request:
From getMessage to getFedExMessage
Changed a few colors in css
Added a coffee bean icon to the page

--- a/Gemma/WebContent/resources/css/style.css
+++ b/Gemma/WebContent/resources/css/style.css
@@ -90,8 +90,8 @@ Layout styles
 }
 
 .heading {
-	color: #fff;
-	background: #f0c575;
+	color: #804000;
+	background: #ffddaa;
 	padding: .5em;
 	font-size: 31px;
 	font-style: italic;
@@ -189,7 +189,7 @@ Nav
 }
 
 .side-menu a:link {
-	color: #f0c575;
+	color: #fde1ce;
 }
 
 .side-menu a:visited {
@@ -419,7 +419,7 @@ table.viewledger td
 }
 div.pageheading
 {
-	color: #dfa620;
+	color: #804000;
 }
 table.viewheader td
 {
