--- a/Gemma/WebContent/resources/css/style.css
+++ b/Gemma/WebContent/resources/css/style.css
@@ -412,15 +412,14 @@ table.catlist
 	vertical-align: text-top;
 	vertical-align: top;
 }
-
-/***********************************************************
- * List tables 
- * These are the specifications for list tables
- ***********************************************************/
 .tableview
 {
 	border-collapse: collapse;
 }
+/***********************************************************
+ * List tables 
+ * These are the specifications for list tables
+ ***********************************************************/
 
 table.tableview tr:nth-child(odd)
 {
@@ -465,17 +464,11 @@ tfoot.tablefooter td
 	border: 1px solid black;
 }
 
-#listaccounts td
-{
-	padding: 0;
-	font-size: 12px;
+#listaccounts {
+	border-collapse: collapse;
+	width: 70%;
 }
-#listinventory th
-{
-	padding: .5em;
-
-}
-#listinventory td:nth-child(2)
+#listinventory
 {
 	text-align: center;
 }
@@ -516,22 +509,7 @@ tfoot.tablefooter td
 {
 	text-align: right;
 }
-#listusers td
-{
-	padding: 0 1em;
-}
-#listusers th
-{
-	padding: 0 1em;	
-}
-#viewcoupons td
-{
-	padding: 0 1em;	
-}
-#viewcoupons th
-{
-	padding: 0 1em;		
-}
+
 .viewreturns td {
 	text-align: right;	
 	padding: 0 2.5em;
